fantasycraft.css
.fantasycraft.sheet.actor {
  min-width: 765px;
  min-height: 715px;
}
.fantasycraft.sheet.actor ul.attributes {
  flex: 0 0 60px;
  margin: 0;
  padding: 0;
}
.fantasycraft.sheet.actor ul.attributes li.attribute {
  border-left: 1px groove lightgray;
}
.fantasycraft.sheet.actor ul.attributes li.attribute .attribute-value {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 28px;
  line-height: 28px;
  font-family: "Freebooter", "Palatino Linotype", serif;
  font-size: 20px;
  font-weight: 700;
}
.fantasycraft.sheet.actor ul.attributes li.attribute .attribute-value > * {
  text-align: center;
  font-weight: 400;
  font-size: 24px;
}
.fantasycraft.sheet.actor ul.attributes li.attribute .attribute-value.multiple input {
  flex: 0 0 33%;
}
.fantasycraft.sheet.actor ul.attributes li.attribute .attribute-value input {
  text-align: center;
  border: none;
  border-bottom: 2px solid #000000;
  background-color: hsla(0, 0%, 0%, 0);
}
.fantasycraft.sheet.actor ul.attributes li.attribute .button {
  width: 100%;
  text-align: center;
}
.fantasycraft.sheet.actor ul.attributes li.attribute .button a {
  display: inline-block;
  font-size: 16px;
  border: 1px solid #b5b3a4;
  border-radius: 2px;
  margin: 3px;
  padding: 0 2px;
  width: 90px;
  height: 22px;
  background-color: lightgray;
}
.fantasycraft.sheet.actor ul.attributes li.attribute .button a:hover {
  background-color: white;
}
.fantasycraft.sheet.actor ul.attributes li.attribute .roll {
  text-align: center;
  max-height: 18px;
}
.fantasycraft.sheet.actor .footer-information {
  font-size: 12px;
  margin-top: -1px;
}
.fantasycraft.sheet.actor .footer-text {
  flex: 0 0 18px;
  margin-top: -1px;
  line-height: 18px;
  font-family: "Signika", sans-serif;
  font-size: 12px;
  font-weight: 400;
  text-align: center;
}
.fantasycraft.sheet.actor .footer-text .flatfooted-input input {
  width: 20px;
  height: 15px;
  background-color: hsla(0, 0%, 0%, 0);
  border: none;
  border-bottom: 1px solid #97958d;
}
.fantasycraft.sheet.actor .tab.attributes {
  overflow: hidden;
}
.fantasycraft.sheet.actor .tab.spellcasting {
  overflow-y: hidden;
}
.fantasycraft.sheet.actor .sheet-body .tab {
  overflow: hidden auto;
}
.fantasycraft.sheet.actor .skill-body {
  max-height: 350px;
}
.fantasycraft.sheet.actor .ability-scores {
  padding: 0px;
  min-height: 260px;
  border-right: 2px groove;
}
.fantasycraft.sheet.actor .ability-scores .ability {
  max-width: 240px;
  line-height: 40px;
}
.fantasycraft.sheet.actor .ability-scores .ability input {
  border: 3px solid white;
  height: 60px;
  max-width: 60px;
  text-align: center;
  background-color: #444;
  font-family: arial;
  font-size: 20px;
  color: white;
}
.fantasycraft.sheet.actor .ability-scores .mod input {
  border: 3px solid white;
  height: 40px;
  max-width: 40px;
  text-align: center;
  background-color: #444;
  font-family: arial;
  font-size: 20px;
  color: white;
}
.fantasycraft.sheet.actor h4.skill-name {
  min-width: 95px;
  max-width: 105px;
}
.fantasycraft.sheet.actor table tr td input.skill-input {
  min-width: 28px;
  text-align: center;
}
.fantasycraft.sheet.actor table tr td input.skill-input:disabled {
  font-size: 16px;
  border: none;
  background: none;
  padding: 0px;
}
.fantasycraft.sheet.actor ul.skills {
  -webkit-column-count: 2;
  /* Chrome, Safari, Opera */
  -moz-column-count: 2;
  /* Firefox */
  column-count: 2;
  width: 100%;
  min-width: 28px;
}
.fantasycraft.sheet.actor ul.skills li.skill input.skill-input {
  min-width: 28px;
}
.fantasycraft.sheet.actor .skill-container {
  -webkit-column-count: 2;
  /* Chrome, Safari, Opera */
  -moz-column-count: 2;
  /* Firefox */
  column-count: 2;
}
.fantasycraft.sheet.actor .skill-title {
  font-size: 10px;
  font-weight: 100;
}
.fantasycraft.sheet.actor .checkbox,
.fantasycraft.sheet.actor .ul .li .checkbox {
  width: 12px;
  margin: 0px;
}
.fantasycraft.sheet.actor .med-checkbox,
.fantasycraft.sheet.actor .ul .li .checkbox {
  width: 15px;
  margin: 0px;
  vertical-align: middle;
}
.fantasycraft.sheet.actor .featCat {
  text-align: right;
  font-size: 10px;
  font-style: italic;
  align-self: center;
}
.fantasycraft.sheet.actor .traits .form-group,
.fantasycraft.sheet.actor .traits .form-group-stacked {
  margin: 0 0 3px 0;
  justify-content: space-between;
}
.fantasycraft.sheet.actor .traits .configure-flags {
  flex: 1;
}
.fantasycraft.sheet.actor .traits label {
  flex: none;
  line-height: 20px;
  font-weight: bold;
  margin: 0 10px 0 0;
}
.fantasycraft.sheet.actor .traits select {
  max-width: 200px;
}
.fantasycraft.sheet.actor .traits input {
  text-align: right;
}
.fantasycraft.sheet.actor .traits i.fas {
  float: right;
  margin-right: 3px;
  text-align: right;
  color: #999;
}
.fantasycraft.sheet.actor .traits i.fas:hover {
  color: #111;
  text-shadow: 0 0 10px red;
}
.fantasycraft.sheet.actor .category-label {
  flex: 0 0 100%;
  background-color: maroon;
  color: white;
  text-align: center;
  max-height: 20px;
  font-size: 16px;
  margin-bottom: 0px;
  text-transform: uppercase;
}
.fantasycraft.sheet.actor .category-body {
  margin-top: 0px;
  padding: 5px;
  min-height: 110px;
}
.fantasycraft.sheet.actor .category-body.compact-input h4 {
  margin: 0px;
}
.fantasycraft.sheet.actor .category-body.compact-input input {
  height: 20px;
  width: 25px;
}
.fantasycraft.sheet.actor .category-body.compact-input select {
  height: 19px;
}
.fantasycraft.sheet.actor .right-border {
  border-right: 1px groove lightgray;
}
.fantasycraft.sheet.actor .collapse-button {
  width: 30px;
  height: 16px;
  color: white;
  background-color: midnightblue;
  position: relative;
  left: 30px;
  line-height: 0px;
  padding: 0px 0px 0px 3px;
  top: 180px;
}
.fantasycraft.sheet.actor .collapse-button.collapsed {
  top: 15px;
}
.fantasycraft.sheet.actor .collapsed-category {
  padding: 0 18px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}
/* ... */

